# matmul

./: .gitignore  README.md  pyproject.toml  xmake.lua
benchmark/: check_isa.py  main.py  test_isa.py  test_lib.py
report/: generate_charts.py  performance_summary.csv  report.typ
scripts/: generate_stubs.py  test_sme.py
src/: isa.hpp  main.cpp  simd.hpp  typedef.h
