[project]
name = "matmul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pybind11>=2.13.6",
    "pybind11-stubgen>=2.5.4",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pyright]
include = ["benchmark"]
exclude = ["build", "**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "C4", "T10", "T20", "Q", "RET", "SIM", "ARG", "PTH", "PLE", "PLR", "PLW", "PIE", "RUF"]
ignore = ["PLR0913", "PLR0915", "PLR2004", "S101"]
fixable = ["ALL"]
unfixable = []
target-version = "py310"

[tool.ruff.per-file-ignores]
"benchmark/*.py" = ["T201"]  # Allow print statements in benchmark files
